# xedocs

./: .bumpversion.cfg  .jupyterlite.doit.db  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.rst  HISTORY.rst  README.rst  jupyterlite_config.json  pyproject.toml  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-tests.yml  publish.yml
docs/: advanced_usage.rst  api_server.rst  basics.ipynb  cli.rst  conf.py  configuration.rst  corrections.rst  environment.yml  from_cmt.rst  index.rst  installation.rst  introduction.rst  playground.ipynb  playground.rst  requirements.txt  schemas.rst  settings.rst  usage.rst  web-playground.ipynb
notebooks/: Accessing_and_inserting_data.ipynb  Defining_Schemas.ipynb  Reprocessing_with_xedocs_corrections.ipynb  basics.ipynb  example_plugin.ipynb
scripts/: api_server.py
test_data/: pmt_gains_random_data.csv
tests/: __init__.py  functions_for_xedocs_test.py  mveto_corrections.npz  test_array_insert.py  test_array_reprocess.py  test_corrections.py  test_dict_insert.py  test_dict_reprocessing.py  test_insertion_and_reprocessing.py  test_map_insert.py  test_single_insert_cutax.py  test_single_insertion.py  test_single_reprocess.py  test_single_reprocess_cutax.py  test_xedocs.py  variables_for_test.py
tests/test_data/: nveto_corrections.npz  pmt_corrections.npz
xedocs/: __init__.py  _frames.py  _settings.py  _straxen_plugin.py  api.py  cli.py  clock.py  contexts.py  database_interface.py  databases.py  datasources.py  dispatchers.py  editors.py  entrypoints.py  gui.py  json_records.py  lazy_accessor.py  panel_editor.py  regex_dispatcher.py  storage.py  utils.py  widgets.py  xedoc.py  xedocs.py  xenon_config.py
xedocs/corrections/: __init__.py  base_corrections.py  bodega.py  electron_lifetime.py  extraction_efficiency.py  fax.py  field_distortion.py  global_versions.py  hit_thresholds.py  plugin_lineages.py  pmt_gains.py  s2_xy.py
xedocs/data_locations/: api.py  corrections_repo.py  data_folder.py  github.py  mongodb.py  sqlite_corrections.py
xedocs/databases/: api.py  github.py  local.py  mongo.py  utilix.py
xedocs/datasources/: api.py  github.py  local.py  utilix.py
xedocs/schemas/: __init__.py  base_schemas.py  bodega.py  constants.py  context_config.py  context_configs.py  detector_numbers.py  fax.py  global_versions.py  historian_reader.py  plugin_lineages.py
xedocs/schemas/analysis/: __init__.py  base_analysis.py  processing_requests.py
xedocs/schemas/calibrations/: __init__.py  base_calibrations.py  diffused_calibration.py  ibelt_calibrations.py  internal_calibrations.py  kr83_calibrations.py  sources.py  utube_calibrations.py
xedocs/schemas/corrections/: __init__.py  avg_se_gain.py  base_corrections.py  base_references.py  baseline_samples_nv.py  bayes_model.py  context_configs.py  cs2_aft_corrections.py  electron_diffusion_cte.py  electron_drift.py  electron_lifetime.py  extraction_efficiency.py  field_distortion.py  field_simulation.py  global_versions.py  hit_thresholds.py  hotspot_veto.py  hotspot_veto_cut.py  photoionization_strength.py  plugin_lineages.py  pmt_area_to_pe.py  pmt_gains.py  position_reconstruction.py  relative_light_yield.py  s1_aft_xyz.py  s1_aft_xyz_maps.py  s1_pattern_maps.py  s1_xyz.py  s2_pattern_map.py  s2_pattern_maps.py  s2_xy.py  se_gain.py  se_gains.py  som_network.py  z_bias.py
xedocs/schemas/corrections/implementations/: __init__-checkpoint.py  __init__.py  avg_se_gain.py  baseline_samples_nv.py  bayes_model.py  cs2_aft_corrections.py  electron_diffusion_cte.py  electron_drift.py  electron_lifetime.py  extraction_efficiency.py  field_distortion.py  global_versions.py  hit_thresholds.py  hotspot_veto-checkpoint.py  hotspot_veto_cut.py  lone_hits.py  peak_reconstruction_bias.py  photoionization_strength.py  pmt_area_to_pe.py  position_reconstruction.py  relative_charge_yield.py  relative_light_yield.py  s1_aft_xyz.py  s1_pattern_maps.py  s1_xyz.py  s2_pattern_maps.py  s2_xy.py  se_gain_partition.py  se_gains.py  som_network.py  test_correction.py  z_bias.py
xedocs/schemas/operations_reports/: __init__.py  abnormal_rates.py  anode_ramp.py  anode_washing.py  base_report.py  detector_operations.py  hotspot.py  warmspot.py
xedocs/schemas/pmt_data/: __init__.py  base_pmt_data.py  gain_calculation.py  pmt_installs.py  pmts.py  voltage_changes.py  voltage_settings.py
